--- a/Rich/nbproject/private/private.properties
+++ b/Rich/nbproject/private/private.properties
@@ -1,8 +1,8 @@
-deploy.ant.properties.file=C:\\Users\\alisa\\AppData\\Roaming\\NetBeans\\8.2\\config\\GlassFishEE6\\Properties\\gfv3-1759671976.properties
+deploy.ant.properties.file=C:\\Users\\17119\\AppData\\Roaming\\NetBeans\\8.2\\config\\GlassFishEE6\\Properties\\gfv3352403153.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=D:/glassfish-4.1.1/glassfish/domains/domain1
-j2ee.server.home=D:/glassfish-4.1.1/glassfish
-j2ee.server.instance=[D:\\glassfish-4.1.1\\glassfish;D:\\glassfish-4.1.1\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
-j2ee.server.middleware=D:/glassfish-4.1.1
+j2ee.server.domain=C:/glassfish4/glassfish/domains/domain1
+j2ee.server.home=C:/glassfish4/glassfish
+j2ee.server.instance=[C:\\glassfish4\\glassfish;C:\\glassfish4\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
+j2ee.server.middleware=C:/glassfish4
 selected.browser=SL[/Browsers/FirefoxBrowser
-user.properties.file=C:\\Users\\alisa\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\17119\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
