--- a/Rich/src/java/Bundle.properties
+++ b/Rich/src/java/Bundle.properties
@@ -2,6 +2,56 @@ PersistenceErrorOccured=A persistence error occurred.
 Previous=Previous
 Next=Next
 
+GuardProjCreated=GuardProj was successfully created.
+GuardProjUpdated=GuardProj was successfully updated.
+GuardProjDeleted=GuardProj was successfully deleted.
+CreateGuardProjTitle=Create New GuardProj
+CreateGuardProjSaveLink=Save
+CreateGuardProjShowAllLink=Show All GuardProj Items
+CreateGuardProjIndexLink=Index
+CreateGuardProjLabel_addtion=Addtion:
+CreateGuardProjTitle_addtion=Addtion
+CreateGuardProjLabel_project=Project:
+CreateGuardProjRequiredMessage_project=The Project field is required.
+CreateGuardProjTitle_project=Project
+CreateGuardProjLabel_user=User:
+CreateGuardProjRequiredMessage_user=The User field is required.
+CreateGuardProjTitle_user=User
+EditGuardProjTitle=Edit GuardProj
+EditGuardProjSaveLink=Save
+EditGuardProjViewLink=View
+EditGuardProjShowAllLink=Show All GuardProj Items
+EditGuardProjIndexLink=Index
+EditGuardProjLabel_addtion=Addtion:
+EditGuardProjTitle_addtion=Addtion
+EditGuardProjLabel_project=Project:
+EditGuardProjRequiredMessage_project=The Project field is required.
+EditGuardProjTitle_project=Project
+EditGuardProjLabel_user=User:
+EditGuardProjRequiredMessage_user=The User field is required.
+EditGuardProjTitle_user=User
+ViewGuardProjTitle=View
+ViewGuardProjDestroyLink=Destroy
+ViewGuardProjEditLink=Edit
+ViewGuardProjCreateLink=Create New GuardProj
+ViewGuardProjShowAllLink=Show All GuardProj Items
+ViewGuardProjIndexLink=Index
+ViewGuardProjLabel_addtion=Addtion:
+ViewGuardProjTitle_addtion=Addtion
+ViewGuardProjLabel_project=Project:
+ViewGuardProjTitle_project=Project
+ViewGuardProjLabel_user=User:
+ViewGuardProjTitle_user=User
+ListGuardProjTitle=List
+ListGuardProjEmpty=(No GuardProj Items Found)
+ListGuardProjDestroyLink=Destroy
+ListGuardProjEditLink=Edit
+ListGuardProjViewLink=View
+ListGuardProjCreateLink=Create New GuardProj
+ListGuardProjIndexLink=Index
+ListGuardProjTitle_addtion=Addtion
+ListGuardProjTitle_project=Project
+ListGuardProjTitle_user=User
 InvesteProjCreated=InvesteProj was successfully created.
 InvesteProjUpdated=InvesteProj was successfully updated.
 InvesteProjDeleted=InvesteProj was successfully deleted.
@@ -102,6 +152,9 @@ CreateProjectTitle_projDepict=ProjDepict
 CreateProjectLabel_userTel=UserTel:
 CreateProjectRequiredMessage_userTel=The UserTel field is required.
 CreateProjectTitle_userTel=UserTel
+CreateProjectLabel_projCondition=ProjCondition:
+CreateProjectRequiredMessage_projCondition=The ProjCondition field is required.
+CreateProjectTitle_projCondition=ProjCondition
 EditProjectTitle=Edit Project
 EditProjectSaveLink=Save
 EditProjectViewLink=View
@@ -148,6 +201,9 @@ EditProjectTitle_projDepict=ProjDepict
 EditProjectLabel_userTel=UserTel:
 EditProjectRequiredMessage_userTel=The UserTel field is required.
 EditProjectTitle_userTel=UserTel
+EditProjectLabel_projCondition=ProjCondition:
+EditProjectRequiredMessage_projCondition=The ProjCondition field is required.
+EditProjectTitle_projCondition=ProjCondition
 ViewProjectTitle=View
 ViewProjectDestroyLink=Destroy
 ViewProjectEditLink=Edit
@@ -182,6 +238,8 @@ ViewProjectLabel_projDepict=ProjDepict:
 ViewProjectTitle_projDepict=ProjDepict
 ViewProjectLabel_userTel=UserTel:
 ViewProjectTitle_userTel=UserTel
+ViewProjectLabel_projCondition=ProjCondition:
+ViewProjectTitle_projCondition=ProjCondition
 ListProjectTitle=List
 ListProjectEmpty=(No Project Items Found)
 ListProjectDestroyLink=Destroy
@@ -203,6 +261,7 @@ ListProjectTitle_projRegion=ProjRegion
 ListProjectTitle_projAddr=ProjAddr
 ListProjectTitle_projDepict=ProjDepict
 ListProjectTitle_userTel=UserTel
+ListProjectTitle_projCondition=ProjCondition
 UserCreated=User was successfully created.
 UserUpdated=User was successfully updated.
 UserDeleted=User was successfully deleted.
