--- a/Rich/nbproject/private/private.properties
+++ b/Rich/nbproject/private/private.properties
@@ -4,5 +4,7 @@ j2ee.server.domain=C:/glassfish4/glassfish/domains/domain1
 j2ee.server.home=C:/glassfish4/glassfish
 j2ee.server.instance=[C:\\glassfish4\\glassfish;C:\\glassfish4\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
 j2ee.server.middleware=C:/glassfish4
-selected.browser=SL[/Browsers/MicrosoftEdgeBrowser
+javac.debug=true
+javadoc.preview=true
+selected.browser=SL[/Browsers/FirefoxBrowser
 user.properties.file=C:\\Users\\17119\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
